--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,8 +38,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // HERE
-    implementation platform('com.google.firebase:firebase-bom:32.2.2')
-    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    //implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation("com.google.firebase:firebase-database")
     implementation("com.google.firebase:firebase-auth")
     // implementation("com.google.firebase:firebase-core")
